force-app/main/default/objects/Document_validator__c/Document_validator__c.object-meta.xml
<CustomObject>
    <label>Document validator</label>
    <nameField>
        <displayFormat>V-{0000}</displayFormat>
        <label>Document validator Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Document validators</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>