force-app/main/default/objects/Document_validator__c/fields/BR_doc_history_id__c.field-meta.xml
<CustomField>
    <fullName>BR_doc_history_id__c</fullName>
    <label>BR Document History Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>