force-app/main/default/objects/Document_validator__c/fields/Broker_Registration__c.field-meta.xml
<CustomField>
    <fullName>Broker_Registration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Broker Registration</label>
    <referenceTo>Broker_Registration__c</referenceTo>
    <relationshipLabel>Document validators</relationshipLabel>
    <relationshipName>Document_validators</relationshipName>
    <type>Lookup</type>
</CustomField>